--- a/packages/discovery-styles/package.json
+++ b/packages/discovery-styles/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ibm-watson/discovery-styles",
-  "version": "1.0.6-beta.0",
+  "version": "1.0.6",
   "description": "Discovery components SASS/CSS styles used with discovery components",
   "license": "Apache-2.0",
   "author": "IBM Corp.",
