--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "eslint": "^6.3.0",
     "eslint-config-prettier": "^6.2.0",
     "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-react": "^7.14.3",
     "eslint-plugin-react-hooks": "^2.0.1",
@@ -82,8 +83,12 @@
     "lint:fix": "yarn run lint --fix"
   },
   "lint-staged": {
-    "{packages,examples}/**/*.{js,jsx,ts,tsx,json,css,scss,md}": [
+    "{packages,examples}/**/*.{json,css,scss,md}": [
       "prettier --write",
+      "git add"
+    ],
+    "{packages,examples}/**/*.js,jsx,ts,tsx": [
+      "eslint --fix",
       "git add"
     ]
   },
