--- a/lerna.json
+++ b/lerna.json
@@ -2,7 +2,7 @@
   "packages": [
     "packages/*"
   ],
-  "version": "1.2.0-rc.0",
+  "version": "1.2.0",
   "npmClient": "yarn",
   "useWorkspaces": true,
   "command": {
