chore: upgrade ibm-watson to 6.0.2

--- a/packages/discovery-react-components/package.json
+++ b/packages/discovery-react-components/package.json
@@ -34,7 +34,7 @@
     "@ibm-watson/discovery-styles": "1.x.x",
     "carbon-components": ">= 10.6.0 < 11",
     "carbon-components-react": ">= 7.6.0 < 8",
-    "ibm-watson": "^5.2.0-alpha-1",
+    "ibm-watson": "^6.0.2",
     "react": ">= 16.8.0 < 17",
     "react-dom": ">= 16.8.0 < 17"
   },
