--- a/package.json
+++ b/package.json
@@ -69,7 +69,7 @@
     "fast-xml-parser": "^3.14.0",
     "gh-pages": "^2.1.1",
     "husky": "^3.0.5",
-    "ibm-watson": "5.2.0-alpha-1",
+    "ibm-watson": "^6.0.2",
     "lerna": "^3.16.4",
     "lerna-update-wizard": "^0.16.0",
     "lint-staged": "^9.2.5",
