--- a/examples/discovery-search-app/package.json
+++ b/examples/discovery-search-app/package.json
@@ -32,7 +32,7 @@
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "http-proxy-middleware": "^0.20.0",
-    "ibm-watson": "5.2.0-alpha-1",
+    "ibm-watson": "^6.0.2",
     "prop-types": "^15.6.2",
     "react": "^16.4.1",
     "react-dom": "^16.4.1"
