--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -32,13 +32,11 @@ jobs:
       - name: Install
         run: yarn install
       - name: Lint
-        run: yarn lint
+        run: npx lerna lint --stream
       - name: Build
-        run: npx lerna run build
-      - name: Build storybook
-        run: yarn workspace @ibm-watson/discovery-react-components run storybook:build
+        run: npx lerna run build --stream & npx lerna run build:storybook --stream
       - name: Test
-        run: npx lerna run test
+        run: npx lerna run test --stream
       - name: NPM Identity
         if: github.ref == 'refs/heads/master' || contains(github.ref, 'release/')
         run: |
